force-app/main/default/objects/OpportunityCriteriaScores__c/OpportunityCriteriaScores__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting will store the description and score value for Different fields of opportunity</description>
    <label>OpportunityCriteriaScores</label>
</CustomObject>