force-app/main/default/objects/OpportunityCriteriaScores__c/fields/Matching_Type__c.field-meta.xml
<CustomField>
    <fullName>Matching_Type__c</fullName>
    <label>Matching Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>