force-app/main/default/objects/OpportunityCriteriaScores__c/fields/Opportunity_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Field__c</fullName>
    <label>Opportunity Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>