force-app/main/default/objects/OpportunityCriteriaScores__c/fields/Sub_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Sub_Criteria__c</fullName>
    <label>Sub Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>